--- a/config.json
+++ b/config.json
@@ -1,15 +1,16 @@
 {
-    "system_libs":          [
-                                "vim",
-                                "tmux",
-                                "gedit",
-                                "kate",
-                                "tig",
-                                "ufw",
-                                "GUFW",
-                                "htop",
-                                "samba",
-                                "monit",
+    "system":   {
+                    "hostname": "ha"
+                },
+    "system_apps": [
+                        "vim",
+                        "tmux",
+                        "gedit",
+                        "kate",
+                        "tig",
+                        "htop"
+                    ],
+    "python_system_libs":   [
                                 "libreadline-dev",
                                 "libnursesw5-dev",
                                 "libssl-dev",
@@ -20,52 +21,68 @@
                                 "libdb-dev",
                                 "tk-dev"
                             ],
-    "user_dirs":            [
+    "user":     {
+                    "accounts": [
+                                    {
+                                        "name": "hass",
+                                        "type": "system",
+                                        "ha_user": true,
+                                        "smb_user": true
+                                    },
+                                    {
+                                        "name": "fstakem",
+                                        "type": "admin",
+                                        "ha_user": false,
+                                        "smb_user": true
+                                    }
+                                ],
+                    "dirs": [
                                 "projects",
                                 "software",
                                 "notes",
                                 "tmp",
                                 "docs"
-                            ],
-    "users":                [
-                                {
-                                    "name": "hass",
-                                    "type": "system",
-                                    "ha_user": true
-                                },
-                                {
-                                    "name": "fstakem",
-                                    "type": "admin",
-                                    "ha_user": false
-                                }
-                            ],
-    "user_aliases":         [
-                                "alias ll='ls -la'",
-                                "alias cd..='cd ..'",
-                                "alias ..='cd ..'"
-                            ],
-    "pyenv_git_url":        "https://github.com/yyuu/pyenv",
-    "pyenv_shortcuts":      [
-                                "export PYENV_ROOT=\"/srv/pyenv\"",
-                                "export PATH=\"$PYENV_ROOT/bin:$PATH\"",
-                                "eval \"$(pyenv init -)\""
-                            ],
-    "python_versions":      [
-                                "3.5.2"
-                            ],
-    "current_python":       "3.5.2",
-    "ha_url":               "https://github.com/home-assistant/home-assistant",
-    "ha_folder_name":       "home_assistant",
-    "src_dir_name":         "src",
-    "venv_dir_name":        "ha_env",
-    "config_dir_name":      "config",
-    "config_url":           "https://github.com/fstakem/home_assistant_config",
-    "firewall_allowed":     [
-                                "ssh",
-                                "http",
-                                "https",
-                                "5123/tcp",
-                                "2812/tcp"
-                            ],
-    "service_file":         "home-assistant.service"
+                            ]
+                },
+    "pyenv":    {
+                    "dir":              "/srv/pyenv",
+                    "git_url":          "https://github.com/yyuu/pyenv",
+                    "shortcuts":        [
+                                            "export PYENV_ROOT=\"/srv/pyenv\"",
+                                            "export PATH=\"$PYENV_ROOT/bin:$PATH\"",
+                                            "eval \"$(pyenv init -)\""
+                                        ],
+                    "update_git_url":   "https://github.com/yyuu/pyenv-update"
+                },
+    "python":   {
+                    "versions":         [   
+                                            "3.6.0"
+                                        ],
+                    "current_version":  "3.6.0"
+                },
+    "home_assistant":   {
+                            "git_src_url":       "https://github.com/home-assistant/home-assistant",
+                            "root_dir":         "home_assistant",
+                            "source_dir":       "src",
+                            "venv_dir":         "ha_env",
+                            "config_dir":       "config",
+                            "git_config_url":   "https://github.com/fstakem/home_assistant_config"
+                        },
+    "firewall": {
+                    "enable":   true,
+                    "allowed":  [
+                                    "ssh",
+                                    "http",
+                                    "https",
+                                    "5123/tcp",
+                                    "2812/tcp"
+                                ]
+                },
+    "smb":  {
+                    "enable":   false
+            },
+    "monit":    {
+                    "enable":   false
+                },
+    "service_file": "home-assistant.service"
 }
