--- a/config.json
+++ b/config.json
@@ -73,7 +73,8 @@
                                     "http",
                                     "https",
                                     "5123/tcp",
-                                    "2812/tcp"
+                                    "2812/tcp",
+                                    "8123/tcp"
                                 ]
                 },
     "smb":  {
