--- a/config.json
+++ b/config.json
@@ -30,7 +30,8 @@
                                             "cython"
                                         ],
                         "git_url":  "https://github.com/OpenZWave/python-openzwave",
-                        "dir":  "openzwave"
+                        "dir":  "openzwave",
+                        "install_dir": "python_openzwave"
                     },
     "libmicrohttpd":  {
                             "system_libs": [
@@ -44,8 +45,9 @@
                             "ftp_site": "ftp://ftp.gnu.org/gnu/libmicrohttpd/"
                         },
     "openzwave_ctrl":  {
-                            "install_dir":  "openzwave_ctrl",
-                            "git_url":  "https://github.com/OpenZWave/open-zwave-control-panel"
+                            "git_url":  "https://github.com/OpenZWave/open-zwave-control-panel",
+                            "dir":  "openzwave",
+                            "install_dir": "openzwave_ctrl"
                         },
     "mqtt": {
                 "dir": "mosquitto",
