Got zwave ctrl panel to work!

--- a/config.json
+++ b/config.json
@@ -121,7 +121,8 @@
                                     "5123/tcp",
                                     "2812/tcp",
                                     "8123/tcp", 
-                                    "1883/tcp"
+                                    "1883/tcp",
+                                    "8888/tcp"
                                 ]
                 },
     "smb":  {
